Add --select-module support to Gradle JUnitPlatformPlugin (#1123)
Closes #1119